Create new tosca elements dir and modify code within. Also some other project layout and code changes.

--- a/heat-translator/tosca/tests/tosca_compute_only.yaml
+++ b/heat-translator/tosca/tests/tosca_compute_only.yaml
@@ -21,8 +21,8 @@ node_templates:
       # host image properties
       os_arch: x86_64 
       os_type: Linux  
-      os_distribution: Ubuntu  
-      os_version: 12
+      os_distribution: Fedora  
+      os_version: 18
 
 outputs:
   instance_ip:
