--- a/heat-translator/tosca/tests/tosca_single_instance_wordpress.yaml
+++ b/heat-translator/tosca/tests/tosca_single_instance_wordpress.yaml
@@ -46,7 +46,7 @@ node_templates:
       db_user: { get_input: db_user }
       db_password: { get_input: db_pwd }
     capabilities:
-      database_endpoint:
+      DatabaseEndpoint:
         properties:
           port: { get_input: db_port }
     requirements:
