--- a/heat-translator/tosca/elements/defs/nodetypesdef.yaml
+++ b/heat-translator/tosca/elements/defs/nodetypesdef.yaml
@@ -1,3 +1,15 @@
+tosca.nodes.Root:
+   properties:
+      - property
+   capabilities:
+      - capability1: somecapbility
+   interfaces:
+      - create
+      - start
+      - stop
+      - install
+      - delete
+      
 tosca.nodes.Compute:
    derived_from: tosca.nodes.Root
    properties:
@@ -40,6 +52,11 @@ tosca.nodes.Database:
 
 tosca.nodes.WebServer:
    derived_from: tosca.nodes.SoftwareComponent
+   capabilities:
+     container: 
+       type: Container
+       properties:
+         containee_types: [ tosca.nodes.WebApplication ]
    
 tosca.nodes.WebApplication.WordPress:
    derived_from: tosca.nodes.SoftwareComponent
