--- a/heat-translator/tosca/elements/defs/nodetypesdef.yaml
+++ b/heat-translator/tosca/elements/defs/nodetypesdef.yaml
@@ -2,7 +2,8 @@ tosca.nodes.Root:
    properties:
       - property
    capabilities:
-      - capability1: somecapbility
+     somecapability: 
+       type: sometype
    interfaces:
       - create
       - start
@@ -21,44 +22,68 @@ tosca.nodes.Compute:
       - os_version
       - ip_address
    capabilities:
-      container:
-         type: Container
-         containee_types: [tosca.nodes.SoftwareComponent]
+      host:
+         type: tosca.capabilities.Container
+         properties:
+            containee_types: [tosca.nodes.SoftwareComponent]
       
 tosca.nodes.SoftwareComponent:
-   derived_from: tosca.nodes.Root
-   requirements:
-      - host: tosca.nodes.Compute
-   capabilities:
-      containee:
-         type: Containee
-         container_types: [tosca.nodes.Compute]
+  derived_from: tosca.nodes.Root
+  properties:
+    - version
+  requirements:
+    - host: tosca.nodes.Compute
 
 tosca.nodes.DBMS:
-   derived_from: tosca.nodes.SoftwareComponent
-   properties:
-      - db_port
+  derived_from: tosca.nodes.SoftwareComponent
+  properties:
+    - dbms_root_password
+    - dbms_port
+  capabilities:
+    host: 
+      type: tosca.capabilities.Container
+      properties:
+        containee_types: [ tosca.nodes.Database ]
 
 tosca.nodes.Database:
-   derived_from: tosca.nodes.DBMS
-   properties:
-      - db_user
-      - db_pwd
-      - db_root_pwd
-   capabilities:
-      database_endpoint:
-        properties:
-          port_name: 'port'
+  derived_from: tosca.nodes.Root
+  properties:
+    - db_user
+    - db_password
+    - db_port
+    - db_name
+  requirements:
+    - host: tosca.nodes.DBMS
+  capabilities:
+    database_endpoint: 
+      type: tosca.capabilities.Endpoint
 
 tosca.nodes.WebServer:
-   derived_from: tosca.nodes.SoftwareComponent
-   capabilities:
-     container: 
-       type: Container
-       properties:
-         containee_types: [ tosca.nodes.WebApplication ]
+  derived_from: tosca.nodes.SoftwareComponent
+  capabilities:
+    http_endpoint:
+      type: tosca.capabilites.Endpoint
+    https_endpoint:
+      type: tosca.capabilities.Endpoint
+    host: 
+      type: tosca.capabilities.Container
+      properties:
+        containee_types: [ tosca.nodes.WebApplication ]
    
 tosca.nodes.WebApplication.WordPress:
-   derived_from: tosca.nodes.SoftwareComponent
-   requirements:
-      - database_endpoint: tosca.nodes.MySQL
+  derived_from: tosca.nodes.WebApplication
+  properties:
+    - admin_user
+    - admin_password
+    - db_host
+  requirements:
+    - host: tosca.nodes.WebServer
+    - database_endpoint: tosca.nodes.Database
+  interfaces:
+    lifecycle:
+      inputs:
+        db_host: string
+        db_port: integer
+        db_name: string
+        db_user: string
+        db_password: string
