--- a/heat-translator/tosca/tests/tosca_single_instance_wordpress.yaml
+++ b/heat-translator/tosca/tests/tosca_single_instance_wordpress.yaml
@@ -31,6 +31,8 @@ node_templates:
     requirements:
       - host: webserver
       - database_endpoint: mysql_database
+      - database: my_database 
+        relationship_type: tosca.relationships.DependsOn
     interfaces:
       create: wordpress_install.sh
       configure: 
