--- a/heat-translator/tosca/elements/defs/nodetypesdef.yaml
+++ b/heat-translator/tosca/elements/defs/nodetypesdef.yaml
@@ -69,7 +69,12 @@ tosca.nodes.WebServer:
       type: tosca.capabilities.Container
       properties:
         containee_types: [ tosca.nodes.WebApplication ]
-   
+
+tosca.nodes.WebApplication:
+  derived_from: tosca.nodes.Root
+  requirements:
+    - host: tosca.nodes.WebServer
+
 tosca.nodes.WebApplication.WordPress:
   derived_from: tosca.nodes.WebApplication
   properties:
