--- a/heat-translator/tosca/elements/defs/nodetypesdef.yaml
+++ b/heat-translator/tosca/elements/defs/nodetypesdef.yaml
@@ -43,7 +43,7 @@ tosca.nodes.DBMS:
     host: 
       type: tosca.capabilities.Container
       properties:
-        containee_types: [ tosca.nodes.Database ]
+        containee_types: [tosca.nodes.Database]
 
 tosca.nodes.Database:
   derived_from: tosca.nodes.Root
@@ -55,20 +55,20 @@ tosca.nodes.Database:
   requirements:
     - host: tosca.nodes.DBMS
   capabilities:
-    database_endpoint: 
+    database_endpoint:
       type: tosca.capabilities.Endpoint
 
 tosca.nodes.WebServer:
   derived_from: tosca.nodes.SoftwareComponent
   capabilities:
     http_endpoint:
-      type: tosca.capabilites.Endpoint
+      type: tosca.capabilities.Endpoint
     https_endpoint:
       type: tosca.capabilities.Endpoint
     host: 
       type: tosca.capabilities.Container
       properties:
-        containee_types: [ tosca.nodes.WebApplication ]
+        containee_types: [tosca.nodes.WebApplication]
 
 tosca.nodes.WebApplication:
   derived_from: tosca.nodes.Root
