--- a/heat-translator/tosca/tests/tosca_single_instance_wordpress.yaml
+++ b/heat-translator/tosca/tests/tosca_single_instance_wordpress.yaml
@@ -32,14 +32,15 @@ node_templates:
       - host: webserver
       - database_endpoint: mysql_database
     interfaces:
-      create: wordpress_install.sh
-      configure: 
-        implementation: wordpress_configure.sh
-        input:
-          wp_db_name: { get_property: [ mysql_database, db_name ] }
-          wp_db_user: { get_property: [ mysql_database, db_user ] }
-          wp_db_password: { get_property: [ mysql_database, db_password ] }
-          wp_db_port: { get_ref_property: [ database_endpoint, database_endpoint, port ] }
+      tosca.interfaces.node.Lifecycle:
+         create: wordpress_install.sh
+         configure: 
+           implementation: wordpress_configure.sh
+           input:
+             wp_db_name: { get_property: [ mysql_database, db_name ] }
+             wp_db_user: { get_property: [ mysql_database, db_user ] }
+             wp_db_password: { get_property: [ mysql_database, db_password ] }
+             wp_db_port: { get_ref_property: [ database_endpoint, database_endpoint, port ] }
 
   mysql_database:
     type: tosca.nodes.Database
@@ -54,7 +55,8 @@ node_templates:
     requirements:
       - host: mysql_dbms
     interfaces:
-      configure: mysql_database_configure.sh
+      tosca.interfaces.node.Lifecycle:
+         configure: mysql_database_configure.sh
 
   mysql_dbms:
     type: tosca.nodes.DBMS
@@ -64,8 +66,9 @@ node_templates:
     requirements:
       - host: server
     interfaces:
-      create: mysql_dbms_install.sh
-      start: mysql_dbms_start.sh
+      tosca.interfaces.node.Lifecycle:
+        create: mysql_dbms_install.sh
+        start: mysql_dbms_start.sh
       configure: 
         implementation: mysql_dbms_configure
         input:
@@ -76,8 +79,9 @@ node_templates:
     requirements:
       - host: server
     interfaces:
-      create: webserver_install.sh
-      start: webserver_start.sh
+      tosca.interfaces.node.Lifecycle:
+        create: webserver_install.sh
+        start: webserver_start.sh
 
   server:
     type: tosca.nodes.Compute
