Additional code generator for HOT Take new command line argument:  --parameters="xxx" enforce all intput parameter must be specify on command line This version runs end to end using a resolved WordPress TOSCA template, output is deployed to Heat successfully

--- a/translator/toscalib/tests/tosca_single_instance_wordpress.yaml
+++ b/translator/toscalib/tests/tosca_single_instance_wordpress.yaml
@@ -62,7 +62,7 @@ node_templates:
     type: tosca.nodes.DBMS
     properties:
       dbms_root_password: { get_input: db_root_pwd }
-      dbms_port: { get_input: db_root_pwd }
+      dbms_port: { get_input: db_port }
     requirements:
       - host: server
     interfaces:
